--- a/vietcare_livestream/pubspec.yaml
+++ b/vietcare_livestream/pubspec.yaml
@@ -34,10 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  web_socket_channel: ^2.4.0
+  web_socket_channel: ^3.0.3
   esc_pos_printer: ^4.1.0
   esc_pos_utils: ^1.1.0
   shared_preferences: ^2.2.2
+  screenshot: ^3.0.0
+  intl: ^0.20.2
+  image: ^3.0.2
 
 dev_dependencies:
   flutter_test:
