--- a/vietcare_livestream/pubspec.yaml
+++ b/vietcare_livestream/pubspec.yaml
@@ -53,6 +53,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
 
+  flutter_launcher_icons: ^0.11.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -94,3 +96,17 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
+
+  windows:
+    generate: true
+    image_path: "assets/app_icon.png"
+    icon_size: 256
+
+  macos:
+    generate: true
+    image_path: "assets/app_icon.png"
