--- a/vietcare_livestream/pubspec.yaml
+++ b/vietcare_livestream/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   screenshot: ^3.0.0
   intl: ^0.20.2
   image: ^3.0.2
+  wakelock_plus: ^1.2.4
 
 dev_dependencies:
   flutter_test:
