--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,5 +1,5 @@
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "assets/app_icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
