--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: vietcare_livestream
-description: "A new Flutter project."
+name: danuma_chotdon
+description: "Ứng dụng chốt đơn cho người bán hàng livestream trên Tiktok"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
